@@ -4,11 +4,11 @@ import ledge.domain.Product;
 import ledge.domain.ProductService;
 import ledge.application.dto.ProductDTO;
 import ledge.application.event.*;
+import ledge.util.event.Subscribe;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class ProductController {
     private final ProductService productService;
@@ -18,32 +18,22 @@ public class ProductController {
         this.productService = productService;
         this.eventBroker = eventBroker;
         
-        this.eventBroker.subscribe(ProductAddedEvent.class, this::handleProductAdded);
-        this.eventBroker.subscribe(ProductRemovedEvent.class, this::handleProductRemoved);
-        this.eventBroker.subscribe(InventoryRefreshRequestedEvent.class, this::handleRefreshRequested);
+        this.eventBroker.register(this);
     }
 
+    @Subscribe
     private void handleProductAdded(ProductAddedEvent event) {
-        ProductDTO dto = event.getProduct();
-        
-        Product domainProduct = new Product(
-            dto.getId(),
-            dto.getName(),
-            dto.getPurchasePrice(),
-            dto.getSellingPrice(),
-            dto.getStockQuantity(),
-            dto.getTaxRate()
-        );
-        
-        productService.addProduct(domainProduct);
+        productService.addProduct(fromDTO(event.getProduct()));
         eventBroker.publish(new ProductsUpdatedEvent(getAllProducts()));
     }
 
+    @Subscribe
     private void handleProductRemoved(ProductRemovedEvent event) {
         productService.deleteProduct(event.getProductId());
         eventBroker.publish(new ProductsUpdatedEvent(getAllProducts()));
     }
 
+    @Subscribe
     private void handleRefreshRequested(InventoryRefreshRequestedEvent event) {
         eventBroker.publish(new ProductsUpdatedEvent(getAllProducts()));
     }
@@ -55,7 +45,7 @@ public class ProductController {
     public List<ProductDTO> getAllProducts() {
         return productService.getAllProducts().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ProductDTO toDTO(Product product) {
@@ -66,6 +56,17 @@ public class ProductController {
             product.getSellingPrice(),
             product.getStockQuantity(),
             product.getTaxRate()
+        );
+    }
+
+    private Product fromDTO(ProductDTO dto) {
+        return new Product(
+            dto.getId(),
+            dto.getName(),
+            dto.getPurchasePrice(),
+            dto.getSellingPrice(),
+            dto.getStockQuantity(),
+            dto.getTaxRate()
         );
     }
 }
